// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "│
◆  This is a very long message
│   that will wrap to multiple
│   lines
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ○ Option 0
│  ● Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 1
│  ● Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ...
│  ○ Option 2
│  ● Option 3
│  ○ Option 4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 3
│  ● Option 4
│  ○ Option 5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  This is a very long message
│   that will wrap to multiple
│   lines
│  Option 4",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "│
◆  Choose an option:
│  Line 2 of the message
│  Line 3 of the message
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ○ Option 0
│  ● Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 1
│  ● Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ...
│  ○ Option 2
│  ● Option 3
│  ○ Option 4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Choose an option:
│  Line 2 of the message
│  Line 3 of the message
│  Option 3",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "│
◆  Whatever
│  ● Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "│
◆  Whatever
│  ...
│  ○ Option 0
│  ○ Option 1
│  ○ Option 2
│  ● Option 3
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Whatever
│  Option 3",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ○ Option 0
│  ● Option 1
│  ○ Option 2 (Hint 2)
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  with multiple lines
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ Option 0
│  with multiple lines
│  ● Option 1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● foo foo foo foo foo foo foo foo foo
│   foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● foo foo foo foo foo foo foo foo foo
│   foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options when message wraps to multiple lines 1`] = `
[
  "<cursor.hide>",
  "│
◆  This is a very long message
│   that will wrap to multiple
│   lines
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ○ Option 0
│  ● Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 1
│  ● Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ...
│  ○ Option 2
│  ● Option 3
│  ○ Option 4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 3
│  ● Option 4
│  ○ Option 5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  This is a very long message
│   that will wrap to multiple
│   lines
│  Option 4",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > correctly limits options with explicit multiline message 1`] = `
[
  "<cursor.hide>",
  "│
◆  Choose an option:
│  Line 2 of the message
│  Line 3 of the message
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ○ Option 0
│  ● Option 1
│  ○ Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Option 1
│  ● Option 2
│  ○ Option 3
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=4>",
  "<erase.down>",
  "│  ...
│  ○ Option 2
│  ● Option 3
│  ○ Option 4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Choose an option:
│  Line 2 of the message
│  Line 3 of the message
│  Option 3",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > handles mixed size re-renders 1`] = `
[
  "<cursor.hide>",
  "│
◆  Whatever
│  ● Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  Long Option
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=12>",
  "<erase.down>",
  "│
◆  Whatever
│  ...
│  ○ Option 0
│  ○ Option 1
│  ○ Option 2
│  ● Option 3
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Whatever
│  Option 3",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ○ Option 0
│  ● Option 1
│  ○ Option 2 (Hint 2)
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders multi-line option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  with multiple lines
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ Option 0
│  with multiple lines
│  ● Option 1
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long cancelled message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● foo foo foo foo foo foo foo foo foo
│   foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > wraps long results 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● foo foo foo foo foo foo foo foo foo
│   foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo foo",
  "
",
  "<cursor.show>",
]
`;
